[package]
name = "humbrow"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
clap = { version = "4.0.2", features = ["env"] }
env_logger = "0.9.0"
log = "0.4.17"
async-trait = "0.1.57"
serde = { version = "1.0", features = ["derive"] }
tokio-util = "0.7.4"
serde_derive = "1.0"
serde_json = "1.0"
libc = "0.2"

[dev-dependencies]
approx = "0.5.1"
more-asserts = "0.3.1"

[[bin]]
name = "humbrow"
path = "src/main.rs"
